[package]
name = "kios"
version = "0.1.0"
authors = ["imkiva <imkiva@islovely.icu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kios_kernel = { path = 'kernel' }
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

