[package]
name = "kios_kernel"
version = "0.1.0"
authors = ["imkiva <imkiva@islovely.icu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
